--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
     "reka-ui": "^2.8.2",
     "tailwind-merge": "^3.4.1",
     "vue": "^3.5.25",
-    "vue-router": "^5.0.3"
+    "vue-router": "^5.0.3",
+    "vue-sonner": "^2.0.9"
   },
   "devDependencies": {
     "@iconify-json/radix-icons": "^1.2.6",
